--- a/sample/Sample/appsettings.json
+++ b/sample/Sample/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQOptions": {
+    "HostName": "localhost",
+    "Password": "guest",
+    "UserName": "guest",
+    "VirtualHost": "/",
+    "ExchangeName": "msbus.exchange",
+    "PublishConfirms": false,
+    "Port": 5672
+  }
 }
